--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -40,7 +40,7 @@ Identifier|Name|Priority|Description
 US11|Home page|High|As an User, I want to access home page, so that I can see a brief website's presentation
 US12|About page|High|As an User, I want to access the about page, so that I can see a complete website's description
 US13|Projects page|High|As an User, I want to access the projects page, so that I can see the prejects list
-US14|Help page|High|As an User, I want to access the Help page, so that I can take off my doubts about the system
+US14|FAQ page|High|As an User, I want to access the FAQ page, so that I can take off my doubts about the system
 US15|Contact page|High|As an User, I want to access contact page, so that I can see the contacts
 US16|Search|High|As an User, I want to consult all the public information, so that I be informed
 
