--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -42,7 +42,7 @@ US12|About page|High|As an User, I want to access the about page, so that I can 
 US13|Projects page|High|As an User, I want to access the projects page, so that I can see the prejects list
 US14|FAQ page|High|As an User, I want to access the FAQ page, so that I can take off my doubts about the system
 US15|Contact page|High|As an User, I want to access contact page, so that I can see the contacts
-US16|Search|High|As an User, I want to consult all the public information, so that I be informed
+US16|Search projects|High|As a user, I want to search a project, so that I can find the specific public project
 
 Table 3: User's user stories 
 
