--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -76,7 +76,7 @@ US41|Add user|High|As a project coordinator, I want to add users, so that I can 
 US42|Remove user|High|As a project coordinator, I want to remove users, so that I can keep only actives users on the project
 US43|Accept user|High|As a project coordinator, I want to accept users, so that I can include users on the project
 US44|Refuse user|High|As a project coordinator, I want to refuse users, so I can reject unnecessary users in the project
-US45|Edit project|High|As a project coordinator, I want to edit project description, so I can adjust the goals of project
+US45|Edit project description|High|As a project coordinator, I want to edit project description, so I can adjust the goals of project
 US46|Remove comments|High|As a project coordinator, I want to remove comments, so I can avoid unwanted comments
 
 Table 6: Coordinator's user stories
