--- a/Report1/A1.md
+++ b/Report1/A1.md
@@ -6,7 +6,7 @@
 
 > We intend to make the platform available to a wide range of devices (desktop, tablet or smartphone), with an easy to use interface. That will allow easy and fast search of available, concluded, and in progress projects. The system also counts with warning alerts of tasks that the user has been assigned and, by the other hand, if the user is the creator of the task, he will be notified when his tasks are done by other users. Each project has a forum where the group members can post any subject relevant to the development. 
 
-> The system can be used by authenticated users or visitors, both of then have access to public information, public projects names and descriptions, but only registered users can create or join projects. When a user creates a project he becomes that project coordinator, being able to set it's information and define the size of the development team, adding and removing users from the group at will or making the project available allowing interested users to join. Users that join the project group are considered common users and can post on the project forum as well as create and pick tasks from the project. 
+> The system can be used by authenticated users or visitors, both of them have access to public information, public projects names and descriptions, but only registered users can create or join projects. When a user creates a project he becomes that project coordinator, being able to set it's information and define the development team size, adding and removing users from the group at will or making the project available allowing interested users to join. Users that join the project group are considered common users and can post on the project forum as well as create and pick tasks from the project. 
  
 ***
 
