--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -43,6 +43,7 @@ US13|Projects page|High|As an User, I want to access the projects page, so that 
 US14|FAQ page|High|As an User, I want to access the FAQ page, so that I can take off my doubts about the system
 US15|Contact page|High|As an User, I want to access contact page, so that I can see the contacts
 US16|Search projects|High|As a user, I want to search a project, so that I can find the specific public project
+US17|Filter projects|Low|As a user, I want to filter projects by project state, so that I can SOMETHING HERE 
 
 Table 3: User's user stories 
 
@@ -51,33 +52,31 @@ Table 3: User's user stories
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
 US21|Sign-Out|High|As a authenticated user, I want to exit from the system, so that I can end my session
-US22|Search projects|High|As a authenticated user, I want to search a project, so that I can find the specific project
-US23|Join a project|High|As a authenticated user, I want to join a project, so that I can access privileged information
-US24|Edit profile|Medium|As a authenticated user, I want to edit my profile, so that I can keep my profile updated
+US22|Join a project|High|As a authenticated user, I want to join a project, so that I can access privileged information
+US23|Edit profile|Medium|As a authenticated user, I want to edit my profile, so that I can keep my profile updated
 
 Table 4: Authenticated User's user stories 
 
-### 2.4. Common
+### 2.4. Project Member
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US31|Member list|High|As a common user in a project, I want to access the member list, so that I can see the members on project
-US32|Create a task|High|As a common user in a project, I want to create tasks, so that I set goals
-US33|Comment on a task|High|As a common user in a project, I want to comment on the tasks, so that I can tell other users my opinion
-US34|Create a forum posts|High|As a common user in a project, I want to create forum posts, so that I start a discussion
-US35|Comment on a forum post|High|As a common user in a project, I want to comment on the forum posts, so that I can tell other users my opinion
-US36|Edit comments|Low|As a common user in a project, I want to edit my comments on the forum posts, so that I can fix my comment
+US31|Member list|High|As a project member, I want to access the member list, so that I can see the members on project
+US32|Create a task|High|As a project member, I want to create tasks, so that I set goals
+US33|Comment on a task|High|As a project member, I want to comment on the tasks, so that I can tell other users my opinion
+US34|Create a forum posts|High|As a project member, I want to create forum posts, so that I start a discussion
+US35|Comment on a forum post|High|As a project member, I want to comment on the forum posts, so that I can tell other users my opinion
+US36|Edit comments|Low|As a project member, I want to edit my comments on the forum posts, so that I can fix my comment
 
 Table 5: Common User's user stories 
 
 ### 2.5. Coordinator
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US41|Add user|High|As a project coordinator, I want to add users, so that I can include users on the project
+US41|Invite user|High|As a project coordinator, I want to invite users, so that I can include users on the project
 US42|Remove user|High|As a project coordinator, I want to remove users, so that I can keep only actives users on the project
-US43|Accept user|High|As a project coordinator, I want to accept users, so that I can include users on the project
-US44|Refuse user|High|As a project coordinator, I want to refuse users, so I can reject unnecessary users in the project
-US45|Edit project description|High|As a project coordinator, I want to edit project description, so I can adjust the goals of project
-US46|Remove comments|High|As a project coordinator, I want to remove comments, so I can avoid unwanted comments
+US43|Accept/Refuse user|High|As a project coordinator, I want to accept/refuse users, so that I can include (or not) users on the project MELHORAR ISSO
+US44|Edit project description|High|As a project coordinator, I want to edit project description, so I can adjust the goals of project
+US45|Remove comments|High|As a project coordinator, I want to remove comments, so I can avoid unwanted comments
 
 Table 6: Coordinator's user stories
  
@@ -89,9 +88,9 @@ A business rule defines or constrains one aspect of the business, with the inten
 
 Identifier|Name|Description 
 ----------|----|-----------
-BR01|User's login|A user login must contain at least 5 characters, including only letters, numbers and  symbols
-BR02|User's password|A user password must contain at least 8 characters, including only letters, numbers and  symbols
-BR03|Max Users|A project can contain a maximum of 100 users
+BR01|Max Users|A project can contain a maximum of 100 users
+BR02|Join in avaliable project|A user can only aks to join in avaliable and public projects VER ISSO DE ACORDO COM O A1
+VER OUTRAS RESTRIÇÕES NO A1
 
  ### A1.2. Technical requirements
 Technical requirements are concerned with the technical aspects that the system must meet, such as performance-related issues, reliability issues and availability issues. 
