--- a/Report1/A1.md
+++ b/Report1/A1.md
@@ -2,7 +2,7 @@
 
 > This project intends to develop an information system with a web interface to be used in management, objective setting and task scheduling  in scope of project development.
 
-> Nowadays, with the amount of task and to do list apps available in the market, for both singular users and groups (i.e.: wunderlist), we decided it could be helpfull to implement out take on the matter focusing not only in the use of to do lists but in full project development. The application will provide interactive access with other users at the same time.
+> Nowadays, with the amount of task and to do list apps available in the market, for both singular users and groups (i.e.: wunderlist), we decided to implement out take on the matter. Our product will focus not only in the use of to do lists but in full project development. The application will provide interactive access with other users at the same time.
 
 > We intend to make the platform available to a wide range of devices (desktop, tablet or smartphone), with an easy to use interface. That will allow easy and fast search of available, concluded, and in progress projects. The system also count with messages of tasks that the user has been assigned and, by the other hand, if the user is the creator of the task, he will be notified when his tasks are done by other users. Each project has a forum where the group members can post any subject relevant to the development. 
 
