--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -26,8 +26,8 @@ Table 1: Actor's description
 
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US01|Sign-In|High|As a visitor, I want to authenticate into the system, so that I can access privileged information
-US02|Sign-up|High|As a visitor, I want to register myself into the system, so that I can authenticate myself into the system
+US01|Sign-In|High|As a Visitor, I want to authenticate into the system, so that I can access privileged information
+US02|Sign-up|High|As a Visitor, I want to register myself into the system, so that I can authenticate myself into the system
 US03|Sign-in using external API|Low|As a Visitor, I want to sign-in through my Facebook account, so that I can authenticate myself into the system
 US04|Sign-up using external API|Low|As a Visitor, I want to register a new account linked to my Facebook account, so that I can access privileged information
 
@@ -39,11 +39,11 @@ Identifier|Name|Priority|Description
 ----------|----|--------|-----------
 US11|Home page|High|As an User, I want to access home page, so that I can see a brief website's presentation
 US12|About page|High|As an User, I want to access the about page, so that I can see a complete website's description
-US13|Projects page|High|As an User, I want to access the projects page, so that I can see the prejects list
+US13|Projects page|High|As an User, I want to access the projects page, so that I can see all public projects
 US14|FAQ page|High|As an User, I want to access the FAQ page, so that I can take off my doubts about the system
 US15|Contact page|High|As an User, I want to access contact page, so that I can see the contacts
 US16|Search projects|High|As a user, I want to search a project, so that I can find the specific public project
-US17|Filter projects|Low|As a user, I want to filter projects by project state, so that I can SOMETHING HERE 
+US17|Filter projects|Low|As a user, I want to filter projects by project state, so that I can limit my search 
 
 Table 3: User's user stories 
 
@@ -51,32 +51,35 @@ Table 3: User's user stories
 
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US21|Sign-Out|High|As a authenticated user, I want to exit from the system, so that I can end my session
-US22|Join a project|High|As a authenticated user, I want to join a project, so that I can access privileged information
-US23|Edit profile|Medium|As a authenticated user, I want to edit my profile, so that I can keep my profile updated
+US21|Sign-Out|High|As an Authenticated User, I want to exit from the system, so that I can end my session
+US22|Join a project|High|As an Authenticated User, I want to join a project, so that I can access privileged information
+US23|Edit profile|Medium|As an Authenticated User, I want to edit my profile, so that I can keep my profile updated
+US24|Respond to project invites|Medium|As an Authenticated User, I want to accept/refuse invites to join a project 
 
 Table 4: Authenticated User's user stories 
 
 ### 2.4. Project Member
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US31|Member list|High|As a project member, I want to access the member list, so that I can see the members on project
-US32|Create a task|High|As a project member, I want to create tasks, so that I set goals
-US33|Comment on a task|High|As a project member, I want to comment on the tasks, so that I can tell other users my opinion
-US34|Create a forum posts|High|As a project member, I want to create forum posts, so that I start a discussion
-US35|Comment on a forum post|High|As a project member, I want to comment on the forum posts, so that I can tell other users my opinion
-US36|Edit comments|Low|As a project member, I want to edit my comments on the forum posts, so that I can fix my comment
+US31|Member list|High|As a Project Member, I want to access the member list, so that I can see the members on project
+US32|Create a task|High|As a Project Member, I want to create tasks, so that I set goals
+US33|Comment on a task|High|As a Project Member, I want to comment on the tasks, so that I can tell other users my opinion
+US34|Create a forum posts|High|As a Project Member, I want to create forum posts, so that I start a discussion
+US35|Comment on a forum post|High|As a Project Member, I want to comment on the forum posts, so that I can tell other users my opinion
+US36|Edit comments|Low|As a Project Member, I want to edit my comments on the forum posts, so that I can fix my comment
 
 Table 5: Common User's user stories 
 
-### 2.5. Coordinator
+### 2.5. Project Coordinator
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US41|Invite user|High|As a project coordinator, I want to invite users, so that I can include users on the project
-US42|Remove user|High|As a project coordinator, I want to remove users, so that I can keep only actives users on the project
-US43|Accept/Refuse user|High|As a project coordinator, I want to accept/refuse users, so that I can include (or not) users on the project MELHORAR ISSO
-US44|Edit project description|High|As a project coordinator, I want to edit project description, so I can adjust the goals of project
-US45|Remove comments|High|As a project coordinator, I want to remove comments, so I can avoid unwanted comments
+US41|Invite user|High|As a Project Coordinator, I want to invite users, so that I can include users on the project
+US42|Remove user|High|As a Project Coordinator, I want to remove users, so that I can keep only actives users on the project
+US43|Accept user|High|As a Project Coordinator, I want to accept users, so that I can include users in the project
+US44|Edit project description|High|As a Project Coordinator, I want to edit project description, so I can adjust the goals of project
+US45|Remove comments|High|As a Project Coordinator, I want to remove comments, so I can avoid unwanted comments
+US46|Edit project status|High|As a Project Coordinator, I want to choose between the Concluded/In Progress status for the project
+US47|Edit project permissions|High|As a Project Coordinator, I want to choose between the Public/Private status for the project
 
 Table 6: Coordinator's user stories
  
@@ -89,7 +92,10 @@ A business rule defines or constrains one aspect of the business, with the inten
 Identifier|Name|Description 
 ----------|----|-----------
 BR01|Max Users|A project can contain a maximum of 100 users
-BR02|Join in avaliable project|A user can only aks to join in avaliable and public projects VER ISSO DE ACORDO COM O A1
+BR02|Join in avaliable project|A user can only aks to join in avaliable and public projects 
+BR03|User birth date|When creating a profile user's can´t choose a date of birth more than 100years ago from current time
+BR04|Task duration|When creating a task that task duration can't be more than a year
+VER ISSO DE ACORDO COM O A1
 VER OUTRAS RESTRIÇÕES NO A1
 
  ### A1.2. Technical requirements
