--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -13,8 +13,10 @@ Identifier|Description|Examples
 User|Generic user that has access to public information such as public project names and descriptions|N/A
 Visitor|Unauthenticated user that has access to public information such as public project names and descriptions. Can register itself (sign-up) or sign-in in the system|N/A
 Authenticated User|Authenticated user that has access to public projects, can create and ask to join projects|N/A
-Common|User that joins a project or is included by the coordinator of said project. Can add tasks, comment on them and create topics on the forum|Team members
-Coordinator|User that creates a project. Can invite, accept join requests and ban users of said project. Has the same permissions of Common user|Team Leader
+Project Member|User that joins a project or is invited by the coordinator of said project. Can add tasks, create forum posts and comment on forum posts|Team members
+Project Coordinator|User that creates a project. Can invite, accept join requests and ban users of said project. Has the same permissions of Common user|Team Leader
+Message Owner|User that comments in a forum post. Can edit and delete your comment|N/A
+Post Owner|User that creates a forum post. Can edit and delete your post. Also can delete others users' comments|*N/A*
 API|External API that can be used to register or authenticate in the system|Facebook
 
 Table 1: Actor's description 
@@ -42,7 +44,7 @@ US12|About page|High|As an User, I want to access the about page, so that I can 
 US13|Projects page|High|As an User, I want to access the projects page, so that I can see all public projects
 US14|FAQ page|High|As an User, I want to access the FAQ page, so that I can take off my doubts about the system
 US15|Contact page|High|As an User, I want to access contact page, so that I can see the contacts
-US16|Search projects|High|As a user, I want to search a project, so that I can find the specific public project
+US16|Search projects|High|As a user, I want to search a project, so that I can find the specific project
 US17|Filter projects|Low|As a user, I want to filter projects by project state, so that I can limit my search 
 
 Table 3: User's user stories 
