--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -16,7 +16,7 @@ Authenticated User|Authenticated user that has access to public projects, can cr
 Project Member|User that joins a project or is invited by the coordinator of said project. Can add tasks, create forum posts and comment on forum posts|Team members
 Project Coordinator|User that creates a project. Can invite, accept join requests and ban users of said project. Has the same permissions of Common user|Team Leader
 Message Owner|User that comments in a forum post. Can edit and delete your comment|N/A
-Post Owner|User that creates a forum post. Can edit and delete your post. Also can delete others users' comments|*N/A*
+Post Owner|User that creates a forum post. Can edit and delete your post. Also can delete others users' comments|N/A
 API|External API that can be used to register or authenticate in the system|Facebook
 
 Table 1: Actor's description 
@@ -84,6 +84,23 @@ US46|Edit project status|High|As a Project Coordinator, I want to choose between
 US47|Edit project permissions|High|As a Project Coordinator, I want to choose between the Public/Private status for the project
 
 Table 6: Coordinator's user stories
+
+### 2.6. Message Owner
+Identifier|Name|Priority|Description
+----------|----|--------|-----------
+US51|Edit Message|High|As a Message Owner, I want to edit my message, so that I can change what I wrote
+US52|Delete Message|High|As a Message Owner, I want to delete my message, so that I can remove a wrong comment 
+
+Table 7: Message Owner's user stories
+
+### 2.7. Post Owner
+Identifier|Name|Priority|Description
+----------|----|--------|-----------
+US61|Edit Post|High|As a Post Owner, I want to edit the post, so that I can change what I wrote
+US62|Delete Post|High|As a Post Owner, I want to delete my post, so that I can remove a wrong post
+US63|Delete Message|High|As a Post Owner, I want to delete users' messages, so that I can remove wrong comments
+
+Table 8: Message Owner's user stories
  
 ## A1. Annex: Supplementary requirements
 This annex contains business rules, technical requirements and other non-functional requirements on the project.
