--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -98,7 +98,7 @@ Identifier|Name|Priority|Description
 ----------|----|--------|-----------
 US61|Edit Post|High|As a Post Owner, I want to edit the post, so that I can change what I wrote
 US62|Delete Post|High|As a Post Owner, I want to delete my post, so that I can remove a wrong post
-US63|Delete Message|High|As a Post Owner, I want to delete users' messages, so that I can remove wrong comments
+US63|Delete Post Messages|High|As a Post Owner, I want to delete users' messages, so that I can remove wrong comments
 
 Table 8: Message Owner's user stories
  
