--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -15,6 +15,7 @@ Visitor|Unauthenticated user that has access to public information such as publi
 Authenticated User|Authenticated user that has access to public projects, can create and ask to join projects|N/A
 Project Member|User that joins a project or is invited by the coordinator of said project. Can add tasks, create forum posts and comment on forum posts|Team members
 Project Coordinator|User that creates a project. Can invite, accept join requests and ban users of said project. Has the same permissions of Common user|Team Leader
+Task Owner|User that creates a task in a project. Can edit and delete your task. Also receives notifications if a project member pick, finish or give up the task|N/A
 Message Owner|User that comments in a forum post. Can edit and delete your comment|N/A
 Post Owner|User that creates a forum post. Can edit and delete your post. Also can delete others users' comments|N/A
 API|External API that can be used to register or authenticate in the system|Facebook
@@ -65,10 +66,9 @@ Identifier|Name|Priority|Description
 ----------|----|--------|-----------
 US31|Member list|High|As a Project Member, I want to access the member list, so that I can see the members on project
 US32|Create a task|High|As a Project Member, I want to create tasks, so that I set goals
-US33|Comment on a task|High|As a Project Member, I want to comment on the tasks, so that I can tell other users my opinion
-US34|Create a forum posts|High|As a Project Member, I want to create forum posts, so that I start a discussion
-US35|Comment on a forum post|High|As a Project Member, I want to comment on the forum posts, so that I can tell other users my opinion
-US36|Edit comments|Low|As a Project Member, I want to edit my comments on the forum posts, so that I can fix my comment
+US33|Create a forum posts|High|As a Project Member, I want to create forum posts, so that I start a discussion
+US34|Comment on a forum post|High|As a Project Member, I want to comment on the forum posts, so that I can tell other users my opinion
+US35|Edit comments|Low|As a Project Member, I want to edit my comments on the forum posts, so that I can fix my comment
 
 Table 5: Common User's user stories 
 
@@ -101,6 +101,15 @@ US62|Delete Post|High|As a Post Owner, I want to delete my post, so that I can r
 US63|Delete Post Messages|High|As a Post Owner, I want to delete users' messages, so that I can remove wrong comments
 
 Table 8: Message Owner's user stories
+
+### 2.8. Task Owner
+Identifier|Name|Priority|Description
+----------|----|--------|-----------
+US71|Edit Task|High|As a Task Owner, I want to edit the task, so that I can set the new goals
+US72|Delete Task|High|As a Task Owner, I want to delete my task, so that I can remove a unnecessary task
+US73|See task notifications|Low|As a Task Owner, I want to see my tasks notifications, so that I can know my tasks status
+
+Table 9: Message Owner's user stories
  
 ## A1. Annex: Supplementary requirements
 This annex contains business rules, technical requirements and other non-functional requirements on the project.
