--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -107,9 +107,9 @@ Identifier|Name|Priority|Description
 ----------|----|--------|-----------
 US71|Edit Task|High|As a Task Owner, I want to edit the task, so that I can set the new goals
 US72|Delete Task|High|As a Task Owner, I want to delete my task, so that I can remove a unnecessary task
-US73|See task notifications|Low|As a Task Owner, I want to see my tasks notifications, so that I can know my tasks status
+US73|See Task Notifications|Low|As a Task Owner, I want to see my tasks notifications, so that I can know my tasks status
 
-Table 9: Message Owner's user stories
+Table 9: Task Owner's user stories
  
 ## A1. Annex: Supplementary requirements
 This annex contains business rules, technical requirements and other non-functional requirements on the project.
