--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -64,11 +64,12 @@ Table 4: Authenticated User's user stories
 ### 2.4. Project Member
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US31|Member list|High|As a Project Member, I want to access the member list, so that I can see the members on project
-US32|Create a task|High|As a Project Member, I want to create tasks, so that I set goals
-US33|Create a forum posts|High|As a Project Member, I want to create forum posts, so that I start a discussion
-US34|Comment on a forum post|High|As a Project Member, I want to comment on the forum posts, so that I can tell other users my opinion
-US35|Edit comments|Low|As a Project Member, I want to edit my comments on the forum posts, so that I can fix my comment
+US31|Member List|High|As a Project Member, I want to access the member list, so that I can see the members on project
+US32|Create a Task|High|As a Project Member, I want to create tasks, so that I set goals
+US33|Pick a Task|High|As a Project Member, I want to pick a task, so that I can do a job in the project
+US34|Create a forum posts|High|As a Project Member, I want to create forum posts, so that I start a discussion
+US35|Comment on a forum post|High|As a Project Member, I want to comment on the forum posts, so that I can tell other users my opinion
+US36|Edit comments|Low|As a Project Member, I want to edit my comments on the forum posts, so that I can fix my comment
 
 Table 5: Common User's user stories 
 
