--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -82,6 +82,8 @@ US43|Accept user|High|As a Project Coordinator, I want to accept users, so that 
 US44|Edit project description|High|As a Project Coordinator, I want to edit project description, so I can adjust the goals of project
 US45|Edit project status|High|As a Project Coordinator, I want to choose between the Concluded/In Progress status for the project
 US46|Edit project permissions|High|As a Project Coordinator, I want to choose between the Public/Private status for the project
+US47|Promove as coordinator|Medium|As a Project Coordinator, I want to set project members as coordinators, so that I can include others coordinator in the project
+US48|Remove Coordinator|Medium|As a Project Coordinator, I want to set coordinators as project members, so that I can remove members' privileges
 
 Table 6: Coordinator's user stories
 
