--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -109,7 +109,7 @@ Identifier|Name|Priority|Description
 US71|Edit Task|High|As a Task Owner, I want to edit the task, so that I can set the new goals
 US72|Delete Task|High|As a Task Owner, I want to delete my task, so that I can remove a unnecessary task
 US73|See Task Notifications|Low|As a Task Owner, I want to see my tasks notifications, so that I can know my tasks status
-US74|Task Completion|As a Task Owner, I want to set my task status, so that I can set a task as done
+US74|Task Completion|Low|As a Task Owner, I want to set my task status, so that I can set a task as done
 
 Table 9: Task Owner's user stories
  
