--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -122,7 +122,7 @@ A business rule defines or constrains one aspect of the business, with the inten
 Identifier|Name|Description 
 ----------|----|-----------
 BR01|Max Users|A project can contain a maximum of 100 users
-BR02|Join in avaliable project|A user can only aks to join in avaliable and public projects 
+BR02|Join in a project|A user can only aks to join in unfinished public projects
 BR03|User birth date|When creating a profile user's can´t choose a date of birth more than 100 years ago from current time
 BR04|Task duration|When creating a task that task duration can't be more than a year
 
