--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -6,10 +6,11 @@
  
 ## 2. Sitemap
  
-> Sitemap presenting the overall structure of the web application.
-> Each screen must be identified in the sitemap.
-> Multiple pages of the same screen (e.g. student profile in SIGARRA) are presented as page stacks.
- 
+Sitemap ia a flow chart diagram that shows connections between web pages, giving a overall structure of the web aplication.
+A visual sitemap is useful for both website users and developers, users can see how to navegate into the site, and developers can easily understand how the information hierachy works.
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report2/actors_diagram.PNG "Logo Title Text 1")
+
 ## 3. Storyboards
  
 > Storyboards for the main use cases of the system.
