--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -10,6 +10,7 @@ Sitemap ia a flow chart diagram that shows connections between web pages, giving
 A visual sitemap is useful for both website users and developers, users can see how to navegate into the site, and developers can easily understand how the information hierachy works.
 
 ![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report2/actors_diagram.PNG "Logo Title Text 1")
+Figure 2: Sitemap. 
 
 ## 3. Storyboards
  
