--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -1,8 +1,42 @@
 # A3: User Interface Prototype
  
+This user interfaces prototype (or horizontal prototype) has the following goals:
+
+    Help to identify and describe the user requirements, and raise new ones;
+    Preview and empirically test the user interface of the product to be developed;
+    Enable quick and multiple iterations on the design of the user interface.
+
+This artefact includes three elements:
+
+    Overview of the interface elements and features common to all pages;
+    Overview of the information system from the viewpoint of the users (sitemap); and
+    Identification and description of the main interactions with the system (at least two), organized as sequences of screens (storyboards).
+
+The interface's descriptions are presented on the end of the document.
+ 
+
 ## 1. Interface and common features
  
-> Screenshots highlighting the main elements of the interface, for desktop and mobile.
+ProPlan is a responsive web application based on HTML5, JavaScript and CSS. The user interface was implemented using the Bootstrap framework.
+
+IMAGEM DA HOME E MOBILE
+
+ 1. ProPan logo
+ 2. Navbar
+ 3. Content
+ 4. Footer
+ 
+Figure 1: Interface's guidelines.
+
+The figure above show our website homepage, for desktops and mobiles. The common features to all pages are highlighted.
+
+  Our website is responsive, so the layout adjust according to the screen size
+  sasa
+
+    It was decided to stay within web conventions and use the default dark blue color for all links between interface pages.
+    The common links to the various pages maintain their position to make the user experience consistent.
+    Different sections have clearly distinct styles in order to highlight distinct hierarchies of information, and assist with the visual flow.
+
  
 ## 2. Sitemap
  
