--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -30,8 +30,8 @@ Figure 1: Interface's guidelines.
 
 The figure above show our website homepage, for desktops and mobiles. The common features to all pages are highlighted.
 
-  Our website is responsive, so the layout adjust according to the screen size
-  sasa
+-Our website is responsive, so the layout adjust according to the screen size
+-teste
 
     It was decided to stay within web conventions and use the default dark blue color for all links between interface pages.
     The common links to the various pages maintain their position to make the user experience consistent.
