--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -27,10 +27,16 @@ Figure 2: Sitemap.
 
 ## 3. Storyboards
  
+Storyboards are presented to represent some of the main interactions with the system using a sequence of interfaces and explaining how navigation is done between them. 
+
+POR LEGENDA NAS FIGURAS
+ 
 > Storyboards for the main use cases of the system.
 > Do not include trivial use cases.
  
 ## 4. Interfaces
+ 
+The following interfaces describe the main content of the web pages and their relative priority and help the project team previewing the features and behaviour of the final product's different screens, both their desktop (left) and mobile (right) versions. 
  
 > Screenshots, structured in subsections, including a reference, a description and a URL to the working version.
  
