--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -4,16 +4,21 @@
  
 ProPlan is a responsive web application based on HTML5, JavaScript and CSS. The user interface was implemented using the Bootstrap framework.
 
-IMAGEM DA HOME E MOBILE
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/home_navbar.PNG "home")
 
  1. ProPlan Logo
  2. Navbar
  3. Content
- 4. Footer
  
-Figure 1: Interface's guidelines.
+Figure 1: Interface's guidelines, navbar view.
 
-The figure above show our website homepage, for desktops and mobiles. The common features to all pages are highlighted.
+The website also have a footer
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/footer.PNG "footer")
+
+Figure 2: Footer view.
+
+The figure 1 show our website homepage, for desktops view. The common features to all pages are highlighted.
 Our website is responsive, so the layout adjust according to the screen size. All pages contain breadcrumbs and the same navbar. The whole website follow the same design, which is a white background, black text, blue buttons and details in orange to separate the site sections. These features makes ProPlan easy to use and make sure a great experience to users.
 
 ## 2. Sitemap
@@ -21,28 +26,114 @@ Our website is responsive, so the layout adjust according to the screen size. Al
 Sitemap ia a flow chart diagram that shows connections between web pages, giving a overall structure of the web aplication.
 A visual sitemap is useful for both website users and developers, users can see how to navegate into the site, and developers can easily understand how the information hierachy works.
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/sitemap1.PNG "Logo Title Text 1")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/sitemap1.PNG "Sitemap")
 
-Figure 2: Sitemap. 
+Figure 3: Sitemap. 
 
 ## 3. Storyboards
  
 Storyboards are presented to represent some of the main interactions with the system using a sequence of interfaces and explaining how navigation is done between them. 
 
-POR LEGENDA NAS FIGURAS
- 
-> Storyboards for the main use cases of the system.
-> Do not include trivial use cases.
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/user_login.PNG "sb1")
+
+Figure 4: Wireflow of user's login and menu options.
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/create_project.PNG "sb2")
+
+Figure 5: Wireflow of creating project.
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Wireflow of posting on forum.
  
 ## 4. Interfaces
  
 The following interfaces describe the main content of the web pages and their relative priority and help the project team previewing the features and behaviour of the final product's different screens, both their desktop (left) and mobile (right) versions. 
  
-> Screenshots, structured in subsections, including a reference, a description and a URL to the working version.
  
 ### UI01: Home
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
  
 ### UI02: About
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI03: FAQ
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI04: Contact
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI05: Sign In
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI06: Sign Up
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI07: Edit Profile
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI08: Projects
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI09: Create a Project
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI10: Project View
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI11: Task List
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI12: Create a Task
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI13: Project Forum
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
+
+### UI14: Create a Forum Post
+
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+
+Figure 6: Home page. 
  
  
 ***
