--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -53,69 +53,69 @@ The following interfaces describe the main content of the web pages and their re
  
 ### UI01: Home
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/home.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 7: Home page. 
  
 ### UI02: About
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/about.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 8: About page. 
 
 ### UI03: FAQ
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/faq.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 9: FAQ page. 
 
 ### UI04: Contact
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/contact.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 10: Contact page. 
 
 ### UI05: Sign In
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/login.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 11: Sign In. 
 
 ### UI06: Sign Up
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/signup.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 12: Sign Up. 
 
 ### UI07: Edit Profile
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/editprofile.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 13: User edit profile page. 
 
 ### UI08: Projects
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/projects.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 14: Projects page. 
 
 ### UI09: Create a Project
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/newproject.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 15: New project page. 
 
 ### UI10: Project View
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/projectview.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 16: Page of a project. 
 
 ### UI11: Task List
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/tasklist.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 17: Task list. 
 
 ### UI12: Create a Task
 
