--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -119,21 +119,21 @@ Figure 17: Task list.
 
 ### UI12: Create a Task
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/createtask.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 18: Create a new task. 
 
 ### UI13: Project Forum
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 19: Project Forum page. 
 
 ### UI14: Create a Forum Post
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forum_post.PNG "sb3")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/forumpost.PNG "sb3")
 
-Figure 6: Home page. 
+Figure 20: Create a Forum Post. 
  
  
 ***
