--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -75,31 +75,31 @@ Table 5: Common User's user stories
 ### 2.5. Project Coordinator
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US41|Invite user|High|As a Project Coordinator, I want to invite users, so that I can include users on the project
-US42|Remove user|High|As a Project Coordinator, I want to remove users, so that I can keep only actives users on the project
-US43|Accept user|High|As a Project Coordinator, I want to accept users, so that I can include users in the project
-US44|Edit project description|High|As a Project Coordinator, I want to edit project description, so I can adjust the goals of project
-US45|Edit project status|High|As a Project Coordinator, I want to choose between the Concluded/In Progress status for the project
-US46|Edit project permissions|High|As a Project Coordinator, I want to choose between the Public/Private status for the project
-US47|Promove as coordinator|Medium|As a Project Coordinator, I want to set project members as coordinators, so that I can include others coordinator in the project
-US48|Remove Coordinator|Medium|As a Project Coordinator, I want to set coordinators as project members, so that I can remove members' privileges
+US41|Invite user|Low|As a Project Coordinator, I want to invite users, so that I can include users on the project
+US42|Remove user|Low|As a Project Coordinator, I want to remove users, so that I can keep only actives users on the project
+US43|Accept user|Low|As a Project Coordinator, I want to accept users, so that I can include users in the project
+US44|Edit project description|Low|As a Project Coordinator, I want to edit project description, so I can adjust the goals of project
+US45|Edit project status|Low|As a Project Coordinator, I want to choose between the Concluded/In Progress status for the project
+US46|Edit project permissions|Low|As a Project Coordinator, I want to choose between the Public/Private status for the project
+US47|Promove as coordinator|Low|As a Project Coordinator, I want to set project members as coordinators, so that I can include others coordinator in the project
+US48|Remove Coordinator|Low|As a Project Coordinator, I want to set coordinators as project members, so that I can remove members' privileges
 
 Table 6: Coordinator's user stories
 
 ### 2.6. Message Owner
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US51|Edit Message|High|As a Message Owner, I want to edit my message, so that I can change what I wrote
-US52|Delete Message|High|As a Message Owner, I want to delete my message, so that I can remove a wrong comment 
+US51|Edit Message|Low|As a Message Owner, I want to edit my message, so that I can change what I wrote
+US52|Delete Message|Low|As a Message Owner, I want to delete my message, so that I can remove a wrong comment 
 
 Table 7: Message Owner's user stories
 
 ### 2.7. Post Owner
 Identifier|Name|Priority|Description
 ----------|----|--------|-----------
-US61|Edit Post|High|As a Post Owner, I want to edit the post, so that I can change what I wrote
-US62|Delete Post|High|As a Post Owner, I want to delete my post, so that I can remove a wrong post
-US63|Delete Post Messages|High|As a Post Owner, I want to delete users' messages, so that I can remove wrong comments
+US61|Edit Post|Low|As a Post Owner, I want to edit the post, so that I can change what I wrote
+US62|Delete Post|Low|As a Post Owner, I want to delete my post, so that I can remove a wrong post
+US63|Delete Post Messages|Low|As a Post Owner, I want to delete users' messages, so that I can remove wrong comments
 
 Table 8: Message Owner's user stories
 
