--- a/Report3/A3.md
+++ b/Report3/A3.md
@@ -34,12 +34,12 @@ Figure 3: Sitemap.
  
 Storyboards are presented to represent some of the main interactions with the system using a sequence of interfaces and explaining how navigation is done between them. 
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/user_login.PNG "sb1")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/user_login.bmp "sb1")
 
 Figure 4: Wireflow of user's login and menu options.
 
 
-![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/create_project.PNG "sb2")
+![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/create_project.bmp "sb2")
 
 Figure 5: Wireflow of creating project.
 
