--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -3,7 +3,7 @@
 ## 1. Actors
 
 ![alt text](https://github.com/JCLemos92/lbaw1767/blob/master/Report2/actors_diagram.PNG "Logo Title Text 1")
-
+<img src='https://github.com/JCLemos92/lbaw1767/blob/master/Report2/actors_diagram.PNG' width=800>
 
 Figure 1: Actors.
 
