--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -13,7 +13,7 @@ User|Generic user that has access to public information such as public project n
 Visitor|Unauthenticated user that has access to public information such as public project names and descriptions. Can register itself (sign-up) or sign-in in the system|N/A
 Authenticated User|Authenticated user that has access to public projects, can create and ask to join projects|N/A
 Project Member|User that joins a project or is invited by the coordinator of said project. Can add tasks, create forum posts and comment on forum posts|Team members
-Project Coordinator|User that creates a project. Can invite, accept join requests and ban users of said project. Has the same permissions of Common user|Team Leader
+Project Coordinator|User that creates a project. Has the same permissions of Project Member, plus, he can invite, accept join requests and ban users of said project.|Team Leader
 Task Owner|User that creates a task in a project. Can edit and delete your task. Also receives notifications if a project member pick, finish or give up the task|N/A
 Message Owner|User that comments in a forum post. Can edit and delete your comment|N/A
 Post Owner|User that creates a forum post. Can edit and delete your post. Also can delete others users' comments|N/A
@@ -69,7 +69,7 @@ US33|Pick a Task|High|As a Project Member, I want to pick a task, so that I can 
 US34|Create a forum posts|High|As a Project Member, I want to create forum posts, so that I start a discussion
 US35|Comment on a forum post|High|As a Project Member, I want to comment on the forum posts, so that I can tell other users my opinion
 
-Table 5: Common User's user stories 
+Table 5: Project Members's user stories 
 
 ### 2.5. Project Coordinator
 Identifier|Name|Priority|Description
