--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -63,7 +63,7 @@ The specification of additional domains can also be made in a compact form, usin
  
 > SQL code necessary to build (and rebuild) the database.
 > This code should also be included in the group's github repository as an SQL script, and a link include here.
- 
+[a relative link](create_instructions.sql) 
  
 ## Revision history
  
