--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -28,31 +28,31 @@ The specification of additional domains can also be made in a compact form, usin
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. Should it be necessary, in case the scheme is not in the Boyce–Codd Normal Form (BCNF), the relational schema is refined using normalization.
  
-| **Table R01**                   ||
-| ------------------------------- ||
-| **Keys**: { id }                ||
-| **Functional Dependencies**     ||
+| **Table R01**                    |
+| -------------------------------- |
+| **Keys**: { id }                 |
+| **Functional Dependencies**      |
 | FD0101          | id → attribute |
 | **Normal Form** | BCNF           |
  
-| **Table R02**                   ||
-| ------------------------------- ||
-| **Keys**: { id }                ||
-| **Functional Dependencies**     ||
+| **Table R02**                    |
+| -------------------------------- |
+| **Keys**: { id }                 |
+| **Functional Dependencies**      |
 | FD0201          | id → attribute |
 | **Normal Form** | BCNF           |
  
-| **Table R03**                            ||
-| ---------------------------------------- ||
-| **Keys**: { id1, attribute }             ||
-| **Functional Dependencies**              ||
+| **Table R03**                             |
+| ----------------------------------------- |
+| **Keys**: { id1, attribute }              |
+| **Functional Dependencies**               |
 | FD0301          | {id} → {id2, attribute} |
 | **Normal Form** | BCNF                    |
  
-| **Table R04**                                   ||
-| ----------------------------------------------- ||
-| **Keys**: { (id1, id2) }                        ||
-| **Functional Dependencies**                     ||
+| **Table R04**                                    |
+| ------------------------------------------------ |
+| **Keys**: { (id1, id2) }                         |
+| **Functional Dependencies**                      |
 | FD0401          | {(id1,id2)} → {id3, attribute} |
 | **Normal Form** | BCNF                           |
  
@@ -76,6 +76,9 @@ Changes made to the first submission:
 GROUP1767, xx/xx/2018
  
 > Carla Cristine Alvarenga Ferrarez de Castro, up201710786@fe.up.pt
+
 > Gabriel Francisco Machado, up201711002@fe.up.pt
+
 > João Carlos Fonseca Pina de Lemos, ee10201@fe.up.pt
+
 > Luis Guilherme da Costa Castro Neves, up201306485@fe.up.pt
