--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -8,10 +8,13 @@
  
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | Table1(__id__, attribute NN)                                         |
-| R02                | Table2(__id__, attribute → Table1 NN)                                |
-| R03                | Table3(__id1__, id2 → Table2, attribute UK NN)                       |
-| R04                | Table4((__id1__, __id2__) → Table3, id3, attribute CK attribute > 0) |
+| R01                | users(__IDuser__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
+| R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN)           |
+| R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
+| R04                | tasks(__IDtask__ UK NN, taskOwner → users NN, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateLimit, completed, completionDate) |
+| R05                | forum(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, forumDescription)                                |
+| R06                | Table3(__id1__, id2 → Table2, attribute UK NN)                       |
+| R07                | Table4((__id1__, __id2__) → Table3, id3, attribute CK attribute > 0) |
  
  
 ## 2. Domains
@@ -63,7 +66,13 @@ The specification of additional domains can also be made in a compact form, usin
  
 > SQL code necessary to build (and rebuild) the database.
 > This code should also be included in the group's github repository as an SQL script, and a link include here.
- [SQL file](create_instruction.sql) 
+
+ {% include_relative create_instruction.sql %}
+ 
+ {% include_relative /create_instruction.sql %}
+ 
+ :create_instruction.sql:
+
  
 ## Revision history
  
